# singleton_sysinfo_cpp

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake
app/: main.cpp
include/: MacSystemInfo.h  SysInfo.h
srcs/: MacSysInfo.mm  MacSystemInfo.mm  SysInfo.cpp
usr/lib/: liblogger.dylib  libsysinfo.1.0.0.dylib  libsysinfo.1.dylib  libsysinfo.dylib
